Added deletePost
